width fix on small screen

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,7 +13,7 @@ a {
 
 * {
   box-sizing: border-box;
-  font-family:'Poppins'
+  font-family: "Poppins";
 }
 
 .flex-container {
@@ -56,6 +56,18 @@ a {
   src: url("/fonts/Poppins-Regular.ttf");
 }
 
-.notion-page{
+.notion-page {
   width: 80%;
+}
+
+@media only screen and (max-width: 600px) {
+  .notion-page {
+    width: 90%;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .notion-page {
+    width: 95%;
+  }
 }
